# issues_code_agent_itmo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  issue_handler.yml  pr_reviewer.yml
src/: __init__.py  cli.py
src/agents/: __init__.py  agent_loop.py  code_agent.py  reviewer_agent.py  tools.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  state_machine.py
src/github/: __init__.py  client.py  issue_parser.py  pr_manager.py
src/llm/: __init__.py  gateway.py
src/prompts/: __init__.py  templates.py
src/web/: __init__.py  app.py
tests/: __init__.py  test_config.py  test_installation.py  test_issue_parser.py  test_state_machine.py
